--- a/ramanfit.ipynb
+++ b/ramanfit.ipynb
@@ -71,12 +71,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29a57bd6275044dd833b492449c42299",
+       "model_id": "b73a098f225643159aeb15f3040f1b6b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FileChooser(path='/Users/fur/src/git/ramanfit', filename='', title='HTML(value='', layout=Layout(display='none…"
+       "FileChooser(path='D:\\Users\\fur\\OneDrive - 高知工科大学・高知県立大学\\work\\src\\ramanfit\\ramanfit', filename='', title='', sh…"
       ]
      },
      "metadata": {},
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 5,
    "id": "f3aaeba3",
    "metadata": {},
    "outputs": [],
@@ -102,21 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 6,
    "id": "7ec414e0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/fur/Library/CloudStorage/OneDrive-高知工科大学/work/experiment/raman/20220912/s4_180min_au-x50p02-d1obj50.txt'"
-      ]
-     },
-     "execution_count": 271,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "INFILE = fc.selected\n",
     "INFILE"
@@ -124,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 7,
    "id": "e1735401",
    "metadata": {},
    "outputs": [],
@@ -135,17 +124,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 8,
    "id": "fe8d523f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "fname must be a string, filehandle, list of strings,\nor generator. Got <class 'NoneType'> instead.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[1;32md:\\Users\\fur\\anaconda3\\envs\\py310\\lib\\site-packages\\numpy\\lib\\npyio.py:985\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(fname, delimiter, comment, quote, imaginary_unit, usecols, skiplines, max_rows, converters, ndmin, unpack, dtype, encoding)\u001b[0m\n\u001b[0;32m    984\u001b[0m             encoding \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(fname, \u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m--> 985\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39miter\u001b[39;49m(fname)\n\u001b[0;32m    986\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mloadtxt(INFILE, delimiter\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m\\t\u001b[39;49;00m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[1;32md:\\Users\\fur\\anaconda3\\envs\\py310\\lib\\site-packages\\numpy\\lib\\npyio.py:1356\u001b[0m, in \u001b[0;36mloadtxt\u001b[1;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, quotechar, like)\u001b[0m\n\u001b[0;32m   1353\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(delimiter, \u001b[39mbytes\u001b[39m):\n\u001b[0;32m   1354\u001b[0m     delimiter \u001b[39m=\u001b[39m delimiter\u001b[39m.\u001b[39mdecode(\u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m-> 1356\u001b[0m arr \u001b[39m=\u001b[39m _read(fname, dtype\u001b[39m=\u001b[39;49mdtype, comment\u001b[39m=\u001b[39;49mcomment, delimiter\u001b[39m=\u001b[39;49mdelimiter,\n\u001b[0;32m   1357\u001b[0m             converters\u001b[39m=\u001b[39;49mconverters, skiplines\u001b[39m=\u001b[39;49mskiprows, usecols\u001b[39m=\u001b[39;49musecols,\n\u001b[0;32m   1358\u001b[0m             unpack\u001b[39m=\u001b[39;49munpack, ndmin\u001b[39m=\u001b[39;49mndmin, encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[0;32m   1359\u001b[0m             max_rows\u001b[39m=\u001b[39;49mmax_rows, quote\u001b[39m=\u001b[39;49mquotechar)\n\u001b[0;32m   1361\u001b[0m \u001b[39mreturn\u001b[39;00m arr\n",
+      "File \u001b[1;32md:\\Users\\fur\\anaconda3\\envs\\py310\\lib\\site-packages\\numpy\\lib\\npyio.py:987\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(fname, delimiter, comment, quote, imaginary_unit, usecols, skiplines, max_rows, converters, ndmin, unpack, dtype, encoding)\u001b[0m\n\u001b[0;32m    985\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39miter\u001b[39m(fname)\n\u001b[0;32m    986\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m--> 987\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    988\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mfname must be a string, filehandle, list of strings,\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m    989\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mor generator. Got \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(fname)\u001b[39m}\u001b[39;00m\u001b[39m instead.\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n\u001b[0;32m    991\u001b[0m \u001b[39mwith\u001b[39;00m fh_closing_ctx:\n\u001b[0;32m    992\u001b[0m     \u001b[39mif\u001b[39;00m comments \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[1;31mValueError\u001b[0m: fname must be a string, filehandle, list of strings,\nor generator. Got <class 'NoneType'> instead."
+     ]
+    }
+   ],
    "source": [
     "data = np.loadtxt(INFILE, delimiter='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": null,
    "id": "eb4e4eec",
    "metadata": {},
    "outputs": [
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "id": "03a1a2b6",
    "metadata": {},
    "outputs": [],
@@ -180,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": null,
    "id": "05484382",
    "metadata": {},
    "outputs": [
@@ -201,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": null,
    "id": "e189e73b",
    "metadata": {},
    "outputs": [],
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": null,
    "id": "8ea13a95",
    "metadata": {},
    "outputs": [],
@@ -221,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": null,
    "id": "c04122b2",
    "metadata": {},
    "outputs": [],
@@ -232,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": null,
    "id": "074032af",
    "metadata": {},
    "outputs": [
@@ -253,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": null,
    "id": "bff3a066",
    "metadata": {},
    "outputs": [],
@@ -263,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": null,
    "id": "b36628ce",
    "metadata": {},
    "outputs": [],
@@ -275,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": null,
    "id": "e5656281",
    "metadata": {},
    "outputs": [],
@@ -291,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": null,
    "id": "90ed3e7f",
    "metadata": {},
    "outputs": [],
@@ -307,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": null,
    "id": "dc140b61",
    "metadata": {},
    "outputs": [
@@ -367,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": null,
    "id": "e01d315b",
    "metadata": {},
    "outputs": [],
@@ -379,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": null,
    "id": "8d7645e5",
    "metadata": {
     "scrolled": true
@@ -449,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": null,
    "id": "546fa946",
    "metadata": {},
    "outputs": [
@@ -494,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "id": "8cc6345a",
    "metadata": {},
    "outputs": [
@@ -529,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
    "id": "7f9d4de6",
    "metadata": {},
    "outputs": [],
@@ -539,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "id": "0766f8ae",
    "metadata": {},
    "outputs": [],
@@ -549,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": null,
    "id": "56dc069e",
    "metadata": {},
    "outputs": [],
@@ -559,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": null,
    "id": "f2fb6567",
    "metadata": {},
    "outputs": [],
@@ -569,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": null,
    "id": "88593f70",
    "metadata": {},
    "outputs": [],
@@ -579,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": null,
    "id": "9363bcf0",
    "metadata": {},
    "outputs": [],
@@ -589,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": null,
    "id": "70854d56",
    "metadata": {},
    "outputs": [],
@@ -599,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": null,
    "id": "2d881274",
    "metadata": {},
    "outputs": [],
@@ -609,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": null,
    "id": "7bfbddcc",
    "metadata": {},
    "outputs": [
@@ -630,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": null,
    "id": "5150e288",
    "metadata": {},
    "outputs": [],
@@ -640,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": null,
    "id": "a253546e",
    "metadata": {},
    "outputs": [],
@@ -650,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": null,
    "id": "1db9f0b0",
    "metadata": {},
    "outputs": [],
@@ -660,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": null,
    "id": "b81aefe1",
    "metadata": {},
    "outputs": [
@@ -681,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": null,
    "id": "40ce773e",
    "metadata": {},
    "outputs": [],
@@ -691,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": null,
    "id": "c3e8708f",
    "metadata": {},
    "outputs": [],
@@ -701,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": null,
    "id": "eb93bac4",
    "metadata": {},
    "outputs": [],
@@ -717,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": null,
    "id": "c3e58569",
    "metadata": {},
    "outputs": [],
@@ -727,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": null,
    "id": "9b5d51f0",
    "metadata": {},
    "outputs": [
@@ -748,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": null,
    "id": "be2bfc2a",
    "metadata": {},
    "outputs": [
@@ -784,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
